dockerfile updated with java17